New spec images

--- a/NeuralNet/latex/annotated.tex
+++ b/NeuralNet/latex/annotated.tex
@@ -1,6 +1,10 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
+\item\contentsline{section}{\hyperlink{classchromo}{chromo} }{\pageref{classchromo}}{}
+\item\contentsline{section}{\hyperlink{classg2048}{g2048} }{\pageref{classg2048}}{}
+\item\contentsline{section}{\hyperlink{classgenome}{genome} }{\pageref{classgenome}}{}
 \item\contentsline{section}{\hyperlink{class_neural_net}{Neural\+Net} }{\pageref{class_neural_net}}{}
 \item\contentsline{section}{\hyperlink{struct_neuron}{Neuron} }{\pageref{struct_neuron}}{}
 \item\contentsline{section}{\hyperlink{struct_neuron_layer}{Neuron\+Layer} }{\pageref{struct_neuron_layer}}{}
+\item\contentsline{section}{\hyperlink{classtile}{tile} }{\pageref{classtile}}{}
 \end{DoxyCompactList}
