--- a/NeuralNet/latex/refman.tex
+++ b/NeuralNet/latex/refman.tex
@@ -141,9 +141,13 @@
 \chapter{Class Index}
 \input{annotated}
 \chapter{Class Documentation}
+\input{classchromo}
+\input{classg2048}
+\input{classgenome}
 \input{class_neural_net}
 \input{struct_neuron}
 \input{struct_neuron_layer}
+\input{classtile}
 %--- End generated contents ---
 
 % Index
