--- a/NeuralNet/latex/struct_neuron.tex
+++ b/NeuralNet/latex/struct_neuron.tex
@@ -4,26 +4,18 @@
 \begin{DoxyCompactItemize}
 \item 
 \hypertarget{struct_neuron_ad748d6c737ad37c00bb6d9a75ede221d}{}\label{struct_neuron_ad748d6c737ad37c00bb6d9a75ede221d} 
-{\bfseries Neuron} (int nI)
-\end{DoxyCompactItemize}
+\hyperlink{struct_neuron_ad748d6c737ad37c00bb6d9a75ede221d}{Neuron} (int nI)
+\begin{DoxyCompactList}\small\item\em contstructor \end{DoxyCompactList}\end{DoxyCompactItemize}
 \subsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
-int \hyperlink{struct_neuron_a09992eeceb974593f5bf557aae581d2d}{num\+Inputs}
-\item 
-\hypertarget{struct_neuron_abc0dcf719541568ee5fa4201d1e3d4b4}{}\label{struct_neuron_abc0dcf719541568ee5fa4201d1e3d4b4} 
-vector$<$ double $>$ {\bfseries vec\+Weight}
-\end{DoxyCompactItemize}
-
-
-\subsection{Member Data Documentation}
 \hypertarget{struct_neuron_a09992eeceb974593f5bf557aae581d2d}{}\label{struct_neuron_a09992eeceb974593f5bf557aae581d2d} 
-\index{Neuron@{Neuron}!num\+Inputs@{num\+Inputs}}
-\index{num\+Inputs@{num\+Inputs}!Neuron@{Neuron}}
-\subsubsection{\texorpdfstring{num\+Inputs}{numInputs}}
-{\footnotesize\ttfamily int Neuron\+::num\+Inputs}
+int \hyperlink{struct_neuron_a09992eeceb974593f5bf557aae581d2d}{num\+Inputs}
+\begin{DoxyCompactList}\small\item\em Number of inputs to the given \hyperlink{struct_neuron}{Neuron}. \end{DoxyCompactList}\item 
+\hypertarget{struct_neuron_abc0dcf719541568ee5fa4201d1e3d4b4}{}\label{struct_neuron_abc0dcf719541568ee5fa4201d1e3d4b4} 
+vector$<$ double $>$ \hyperlink{struct_neuron_abc0dcf719541568ee5fa4201d1e3d4b4}{vec\+Weight}
+\begin{DoxyCompactList}\small\item\em Array of weights from each input. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
-Number of inputs to the given \hyperlink{struct_neuron}{Neuron} 
 
 The documentation for this struct was generated from the following files\+:\begin{DoxyCompactItemize}
 \item 
