--- a/NeuralNet/latex/struct_neuron_layer.tex
+++ b/NeuralNet/latex/struct_neuron_layer.tex
@@ -4,17 +4,17 @@
 \begin{DoxyCompactItemize}
 \item 
 \hypertarget{struct_neuron_layer_abd4e017ef1311a09eb0b840e5ebb9c7f}{}\label{struct_neuron_layer_abd4e017ef1311a09eb0b840e5ebb9c7f} 
-{\bfseries Neuron\+Layer} (int n\+Nurons, int num\+Inputs\+Per\+Neuron)
-\end{DoxyCompactItemize}
+\hyperlink{struct_neuron_layer_abd4e017ef1311a09eb0b840e5ebb9c7f}{Neuron\+Layer} (int n\+Nurons, int num\+Inputs\+Per\+Neuron)
+\begin{DoxyCompactList}\small\item\em constructor \end{DoxyCompactList}\end{DoxyCompactItemize}
 \subsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
 \hypertarget{struct_neuron_layer_a0c1340701dbd67d945f65f68e4e93f9e}{}\label{struct_neuron_layer_a0c1340701dbd67d945f65f68e4e93f9e} 
-int {\bfseries num\+Neurons}
-\item 
+int \hyperlink{struct_neuron_layer_a0c1340701dbd67d945f65f68e4e93f9e}{num\+Neurons}
+\begin{DoxyCompactList}\small\item\em number neurons in this layer \end{DoxyCompactList}\item 
 \hypertarget{struct_neuron_layer_aa1dd1b1359dc7ae424f336357db233cd}{}\label{struct_neuron_layer_aa1dd1b1359dc7ae424f336357db233cd} 
-vector$<$ \hyperlink{struct_neuron}{Neuron} $>$ {\bfseries vec\+Neurons}
-\end{DoxyCompactItemize}
+vector$<$ \hyperlink{struct_neuron}{Neuron} $>$ \hyperlink{struct_neuron_layer_aa1dd1b1359dc7ae424f336357db233cd}{vec\+Neurons}
+\begin{DoxyCompactList}\small\item\em layer of neurons \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 The documentation for this struct was generated from the following files\+:\begin{DoxyCompactItemize}
