final struct spects

--- a/NeuralNet/latex/refman.tex
+++ b/NeuralNet/latex/refman.tex
@@ -147,6 +147,7 @@
 \input{class_neural_net}
 \input{struct_neuron}
 \input{struct_neuron_layer}
+\input{class_params}
 \input{classtile}
 %--- End generated contents ---
 
