--- a/NeuralNet/latex/struct_neuron.tex
+++ b/NeuralNet/latex/struct_neuron.tex
@@ -3,9 +3,8 @@
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\hypertarget{struct_neuron_ad748d6c737ad37c00bb6d9a75ede221d}{}\label{struct_neuron_ad748d6c737ad37c00bb6d9a75ede221d} 
 \hyperlink{struct_neuron_ad748d6c737ad37c00bb6d9a75ede221d}{Neuron} (int nI)
-\begin{DoxyCompactList}\small\item\em contstructor \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{DoxyCompactItemize}
 \subsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
@@ -15,6 +14,20 @@ int \hyperlink{struct_neuron_a09992eeceb974593f5bf557aae581d2d}{num\+Inputs}
 \hypertarget{struct_neuron_abc0dcf719541568ee5fa4201d1e3d4b4}{}\label{struct_neuron_abc0dcf719541568ee5fa4201d1e3d4b4} 
 vector$<$ double $>$ \hyperlink{struct_neuron_abc0dcf719541568ee5fa4201d1e3d4b4}{vec\+Weight}
 \begin{DoxyCompactList}\small\item\em Array of weights from each input. \end{DoxyCompactList}\end{DoxyCompactItemize}
+
+
+\subsection{Constructor \& Destructor Documentation}
+\hypertarget{struct_neuron_ad748d6c737ad37c00bb6d9a75ede221d}{}\label{struct_neuron_ad748d6c737ad37c00bb6d9a75ede221d} 
+\index{Neuron@{Neuron}!Neuron@{Neuron}}
+\index{Neuron@{Neuron}!Neuron@{Neuron}}
+\subsubsection{\texorpdfstring{Neuron()}{Neuron()}}
+{\footnotesize\ttfamily Neuron\+::\+Neuron (\begin{DoxyParamCaption}\item[{int}]{nI }\end{DoxyParamCaption})}
+
+\hyperlink{struct_neuron}{Neuron} constructor 
+\begin{DoxyParams}{Parameters}
+{\em nI} & Number of Inputs \\
+\hline
+\end{DoxyParams}
 
 
 The documentation for this struct was generated from the following files\+:\begin{DoxyCompactItemize}
