--- a/NeuralNet/latex/struct_neuron_layer.tex
+++ b/NeuralNet/latex/struct_neuron_layer.tex
@@ -3,9 +3,8 @@
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\hypertarget{struct_neuron_layer_abd4e017ef1311a09eb0b840e5ebb9c7f}{}\label{struct_neuron_layer_abd4e017ef1311a09eb0b840e5ebb9c7f} 
 \hyperlink{struct_neuron_layer_abd4e017ef1311a09eb0b840e5ebb9c7f}{Neuron\+Layer} (int n\+Nurons, int num\+Inputs\+Per\+Neuron)
-\begin{DoxyCompactList}\small\item\em constructor \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{DoxyCompactItemize}
 \subsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
@@ -15,6 +14,22 @@ int \hyperlink{struct_neuron_layer_a0c1340701dbd67d945f65f68e4e93f9e}{num\+Neuro
 \hypertarget{struct_neuron_layer_aa1dd1b1359dc7ae424f336357db233cd}{}\label{struct_neuron_layer_aa1dd1b1359dc7ae424f336357db233cd} 
 vector$<$ \hyperlink{struct_neuron}{Neuron} $>$ \hyperlink{struct_neuron_layer_aa1dd1b1359dc7ae424f336357db233cd}{vec\+Neurons}
 \begin{DoxyCompactList}\small\item\em layer of neurons \end{DoxyCompactList}\end{DoxyCompactItemize}
+
+
+\subsection{Constructor \& Destructor Documentation}
+\hypertarget{struct_neuron_layer_abd4e017ef1311a09eb0b840e5ebb9c7f}{}\label{struct_neuron_layer_abd4e017ef1311a09eb0b840e5ebb9c7f} 
+\index{Neuron\+Layer@{Neuron\+Layer}!Neuron\+Layer@{Neuron\+Layer}}
+\index{Neuron\+Layer@{Neuron\+Layer}!Neuron\+Layer@{Neuron\+Layer}}
+\subsubsection{\texorpdfstring{Neuron\+Layer()}{NeuronLayer()}}
+{\footnotesize\ttfamily Neuron\+Layer\+::\+Neuron\+Layer (\begin{DoxyParamCaption}\item[{int}]{n\+Nurons,  }\item[{int}]{num\+Inputs\+Per\+Neuron }\end{DoxyParamCaption})}
+
+\hyperlink{struct_neuron_layer}{Neuron\+Layer} Constructor 
+\begin{DoxyParams}{Parameters}
+{\em n\+Nurons} & Number of Nurons \\
+\hline
+{\em numinputs\+Per\+Neuron} & \\
+\hline
+\end{DoxyParams}
 
 
 The documentation for this struct was generated from the following files\+:\begin{DoxyCompactItemize}
