--- a/NeuralNet/latex/annotated.tex
+++ b/NeuralNet/latex/annotated.tex
@@ -6,5 +6,6 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\hyperlink{class_neural_net}{Neural\+Net} }{\pageref{class_neural_net}}{}
 \item\contentsline{section}{\hyperlink{struct_neuron}{Neuron} }{\pageref{struct_neuron}}{}
 \item\contentsline{section}{\hyperlink{struct_neuron_layer}{Neuron\+Layer} }{\pageref{struct_neuron_layer}}{}
+\item\contentsline{section}{\hyperlink{class_params}{Params} }{\pageref{class_params}}{}
 \item\contentsline{section}{\hyperlink{classtile}{tile} }{\pageref{classtile}}{}
 \end{DoxyCompactList}
